<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_bottom_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        
        <RadioButton
            android:id="@+id/main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/little_sapce"
            android:drawableTop="@drawable/main_home_selector"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/main_page"
            android:textColor="@drawable/main_text_color_selector" />

        <RadioButton
            android:id="@+id/main_tuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/little_sapce"
            android:drawableTop="@drawable/main_tuan_selector"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/saoyisao"
            android:textColor="@drawable/main_text_color_selector" />

        <RadioButton
            android:id="@+id/main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/little_sapce"
            android:drawableTop="@drawable/main_search_selector"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/order"
            android:textColor="@drawable/main_text_color_selector" />

        <RadioButton
            android:id="@+id/main_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawablePadding="@dimen/little_sapce"
            android:drawableTop="@drawable/main_my_selector"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:text="@string/mine"
            android:textColor="@drawable/main_text_color_selector" />
    </RadioGroup>

</LinearLayout>