<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/goods_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_bg"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="@dimen/dip_67"
            android:layout_height="@dimen/dip_67"
            android:layout_marginBottom="@dimen/dip_12"
            android:layout_marginLeft="@dimen/dip_10"
            android:layout_marginRight="@dimen/dip_16"
            android:layout_marginTop="@dimen/dip_12"
            android:background="@drawable/image_border">

            <ImageView
                android:id="@+id/orderdshop_img"
                android:layout_width="@dimen/dip_65"
                android:layout_height="@dimen/dip_65"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                android:src="@drawable/default_list" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_65"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ordered_toeva_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dip_10"
                android:maxLines="2"
                android:text=""
                android:textColor="@color/personal_textview"
                android:textSize="@dimen/size14" />

            <TextView
                android:id="@+id/ordered_toeva_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/dip_10"
                android:maxLines="1"
                android:text="2017/4/13"
                android:textColor="@color/trans"
                android:textSize="@dimen/size12" />


        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dip_6"
            android:text="@string/pay_money"
            android:textColor="@color/personal_textview"

            android:textSize="@dimen/personal_texthint" />

        <TextView
            android:id="@+id/order_toeva_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dip_10"
            android:paddingTop="@dimen/dip_10"
            android:textColor="@color/afford_newprice"
            android:textSize="@dimen/personal_texthint" />

        <Button
            android:id="@+id/btn_order_toeva_mybook"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginRight="@dimen/dip_10"
            android:background="@drawable/btn_order"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dip_8"
            android:paddingLeft="@dimen/dip_15"
            android:paddingRight="@dimen/dip_15"
            android:paddingTop="@dimen/dip_8"
            android:text="@string/order_detailbook"
            android:textColor="@drawable/btn_order_clicktext"
            android:textSize="@dimen/personal_texthint" />

        <Button
            android:id="@+id/btn_order_toeva_eva"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginRight="@dimen/dip_10"
            android:background="@drawable/btn_order"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/dip_8"
            android:paddingLeft="@dimen/dip_15"
            android:paddingRight="@dimen/dip_15"
            android:paddingTop="@dimen/dip_8"
            android:text="@string/order_toeva"
            android:textColor="@drawable/btn_order_clicktext"
            android:textSize="@dimen/personal_texthint" />


    </LinearLayout>
</LinearLayout>

